クリーンアップ！クリーンアップ！クリーンアップ！

--- a/.gitignore
+++ b/.gitignore
@@ -2,28 +2,23 @@ HTML-Pictogram-MobileJp-TypeCast-*
 .*
 !.gitignore
 !.shipit
-nytprof*
-cover_db*
-pm_to_blib
-Makefile*
-test.*
-!Makefile.PL
-*blib
-MYMETA.yml
-META.yml
-pod.html
-inc/
 *.o
 *.obj
 *.bs
 *.def
-*.tmp
+Makefile*
+!Makefile.PL
+*blib
+META.yml
+MYMETA.yml
+inc/
 *.out
-*.swp
 *.bak
 *.old
+ppport.h
+nytprof*
+cover_db*
 *.gcda
 *.gcno
 *.gcov
 *.stackdump
-*~
